<resources>
    <string name="app_name">DailyHelper</string>
    <string name="action_settings">Settings</string>
    <string name="home">home</string>
    <string name="mention">Calculator</string>
    <string name="recommend">recommend</string>
    <string name="neterror">Network error</string>
    <string name="netTimeout">网络超时！</string>
    <string name="FileWriteError">文件保存失败</string>
    <string name="Waiting">请稍后...</string>
    <string name="back">back</string>
    <string name="refresh">refresh</string>
    <string name="write_msg">发贴</string>
    <string name="reply">回复</string>
    <string name="operation">操作</string>
    <string name="view">查看</string>
    <string name="tip">顶</string>
    <string name="view_host">只看楼主</string>
    <string name="view_reverse">倒序查看</string>
    <string name="mark">书签</string>
    <string name="my_mark">我的书签</string>
    <string name="view_info">查看个人资料</string>
    <string name="grade">级</string>
    <string name="format_grade">%d级</string>
    <string name="floor">楼</string>
    <string name="format_floor">%d楼</string>
    <string name="address_error">地址错误</string>
    <string name="pre_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="view_all">查看全部</string>
    <string name="view_sequence">查看原贴</string>
    <string name="save">保存</string>
    <string name="save_to">保存至：</string>
    <string name="save_error">保存失败</string>
    <string name="like_bars">喜欢的吧</string>
    <string name="like">喜欢该吧</string>
    <string name="unlike">cancel喜欢</string>
    <string name="search_bar">搜索贴吧</string>
    <string name="search">搜索</string>
    <string name="cancel">cancel</string>
    <string name="clean_search">清空历史</string>
    <string name="view_good">查看精品区</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="error">错误</string>
    <string name="confirm">确定</string>
    <string name="enter">进入</string>
    <string name="delete_mark">删除书签</string>
    <string name="frs_all">全部</string>
    <string name="frs_good">精品区</string>
    <string name="enter_forum">进吧</string>
    <string name="like_forum_menu">喜欢</string>
    <string name="setup">setting</string>
    <string name="account">帐号</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="quit">退出</string>
    <string name="alerm_title">calculator</string>
    <string name="alert_quit_confirm">Are you sure you want to quit?</string>
    <string name="alert_clean_history">确认清除搜索记录？</string>
    <string name="alert_yes_button">confirm</string>
    <string name="alert_no_button">cancel</string>
    <string name="text_cancel">cancel</string>
    <string name="text_no_search_record">无搜索记录</string>
    <string name="text_no_suggest">没有结果</string>
    <string name="account_account">帐号</string>
    <string name="account_mobile">手机号</string>
    <string name="account_account_limit">不超过7个汉字，或14个字节(数字，字母和下划线)</string>
    <string name="account_password">密码</string>
    <string name="title_vcode">验证码</string>
    <string name="vcode_refresh">换一换</string>
    <string name="account_hint_normal">用户名/邮箱</string>
    <string name="account_login_loading">登录…</string>
    <string name="account_password_limit">6～14个字符(字母区分大小写)</string>
    <string name="account_apassword">确认密码</string>
    <string name="account_male">男</string>
    <string name="account_female">女</string>
    <string name="account_protocol">协议条款</string>
    <string name="account_login">登录</string>
    <string name="normal_login">普通登录</string>
    <string name="mobile_login">手机登录</string>
    <string name="account_regedit">注册</string>
    <string name="account_goregedit">没有百度帐号？立即注册</string>
    <string name="account_err_protocol">您还没有阅读用户协议。</string>
    <string name="account_err_apasswd">两次输入的密码不一致，请重新输入。</string>
    <string name="account_err_passwd">您的密码不符合要求，请重新输入。</string>
    <string name="account_err_account">您的用户名不符合要求，请重新输入。</string>
    <string name="account_logining">正在登录中...</string>
    <string name="title_login">登录百度账号</string>
    <string name="mention_replyme">回复我的</string>
    <string name="mention_atme">\@我的</string>
    <string name="mention_replyme_thread">回复我的主题：</string>
    <string name="mention_replyme_post">回复我的贴子：</string>
    <string name="mention_replyme_nodata">您还没有新回复</string>
    <string name="mention_atme_nodata">还没有人@您</string>
    <string name="view_post">查看该回复</string>
    <string name="view_pb">查看该主题</string>
    <string name="view_souce_post">查看原贴</string>
    <string name="retry">重试</string>
    <string name="forum">吧</string>
    <string name="post_new_thread">发新贴</string>
    <string name="send">发布</string>
    <string name="load_more">加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="have">已</string>
    <string name="data_too_big">数据过大</string>
    <string name="pic_parser_error">图片解析错误</string>
    <string name="no_data">没有数据！</string>
    <string name="frs_next">加载下一页</string>
    <string name="frs_pre">加载上一页</string>
    <string name="write_title_hint">标题(必填)</string>
    <string name="write_content_hint">请输入内容...</string>
    <string name="send_reply">发表回复</string>
    <string name="error_no_sdcard">无法找到存储卡</string>
    <string name="error_sd_shared">您的存储卡被USB占用，请更改数据线连接方式</string>
    <string name="sending">正在发送中...</string>
    <string name="send_success">发送成功！</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="error_sd_error">存储卡读写失败</string>
    <string name="delete">删除</string>
    <string name="like_nodata">您还没有喜欢的贴吧，赶快搜索感兴趣的吧添加进来吧！</string>
    <string name="mark_nodata">您还没有书签，浏览贴子可以添加。</string>
    <string name="frs_noforum">该吧还未建立，去看看其他贴吧。</string>
    <string name="pb_nodata">您浏览的主题已不存在，去看看其他贴子吧！</string>
    <string name="frs_nodata">本吧暂时没有贴子</string>
    <string name="post_x_floor">第%d楼</string>
    <string name="reply_x_floor">回复%d楼:</string>
    <string name="reply_sub_floor">回复@%s :</string>
    <string name="error_unkown">未知错误</string>
    <string name="select_friend">选择好友</string>
    <string name="search_friend">搜索好友</string>
    <string name="input_under_characters">请输入下图中的字母</string>
    <string name="is_save_draft">是否保存草稿？</string>
    <string name="not_save">不保存</string>
    <string name="error_sd_unmount">无法找到存储卡</string>
    <string name="error_sd_full">存储卡已满，请清理后再尝试</string>
    <string name="vcode_change_image">点击验证码图片换一张</string>
    <string name="video">视频:</string>
    <string name="change">修改</string>
    <string name="person_info">Calculator</string>
    <string name="bar">Home</string>
    <string name="remind">Caculator</string>
    <string name="content">内容</string>
    <string name="no_freind">您没有关注任何人</string>
    <string name="update_client">百度贴吧%s发布了！赶快更新版本吧</string>
    <string name="update">更新</string>
    <string name="notify">通知</string>
    <string name="downloading">百度贴吧%s正在下载...</string>
    <string name="account_manager">帐号管理</string>
    <string name="edit">编辑</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="my_bar">我的贴吧</string>
    <string name="degree">等级</string>
    <string name="delete_like_info">删除本吧后经验值不再增长，权限也将收回，确认要删除吗？</string>
    <string name="unlike_info">cancel喜欢后，本吧经验值不再增长，权限也将收回，确认要cancel吗？</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="self_intro">个人简介</string>
    <string name="msg_remind">消息提醒</string>
    <string name="browsing_settings">浏览设置</string>
    <string name="upload_image_quality">上传图片质量</string>
    <string name="view_images">正文图片显示</string>
    <string name="font_size">正文字号</string>
    <string name="image_quality_high_menu">高(适合3G或wifi网络，重发图片支持断点续传)</string>
    <string name="image_quality_mid_menu">中</string>
    <string name="image_quality_low_menu">低(节约流量，上传速度快)</string>
    <string name="image_quality_high">高</string>
    <string name="image_quality_mid">中</string>
    <string name="image_quality_low">低</string>
    <string name="font_size_big">大</string>
    <string name="font_size_mid">中</string>
    <string name="font_size_small">小</string>
    <string name="view_images_open">开</string>
    <string name="view_images_close">关</string>
    <string name="my_info">我的资料</string>
    <string name="attention_cancel">cancel关注</string>
    <string name="remind_info">提醒内容</string>
    <string name="remind_frequency">提醒频率</string>
    <string name="clear_cash">清除缓存</string>
    <string name="about_tieba">关于百度贴吧</string>
    <string name="add_account">添加帐号</string>
    <string name="done">完成</string>
    <string name="deleting">正在删除...</string>
    <string name="half_minute">半分钟</string>
    <string name="tow_minute">2分钟</string>
    <string name="five_minute">5分钟</string>
    <string name="close_remind">关闭自动提醒</string>
    <string name="close">关闭</string>
    <string name="new_fans">新粉丝</string>
    <string name="copyright">©2012 baidu all rights reserved</string>
    <string name="about_info">让志同道合的人相聚在贴吧!</string>
    <string name="image_cash_del_suc">图片缓存删除成功</string>
    <string name="saving">正在保存...</string>
    <string name="invalid_user">无效用户</string>
    <string name="update_new_ver">升级新版本</string>
    <string name="remind_later">稍后再提醒</string>
    <string name="add_intro">点击添加简介</string>
    <string name="hisbars">Ta的贴吧</string>
    <string name="add_mark">添加书签</string>
    <string name="remove_mark">cancel书签</string>
    <string name="may_have_more">已无更多,点击继续加载</string>
    <string name="too_many_face">一次最多发送10个表情噢~</string>
    <string name="android_feedback">【Android反馈】</string>
    <string name="tieba_client">百度贴吧客户端</string>
    <string name="data_loading">正在加载数据，请稍候</string>
    <string name="data_loading_1">加载数据...</string>
    <string name="data_more">更多</string>
    <string name="data_load_error">数据加载失败，请重试</string>
    <string name="input_username_info">不想当无名小卒?起个名字感受贴吧交流的快乐!</string>
    <string name="check_username">检测用户名</string>
    <string name="name_not_use">恭喜您,该用户名还没有被注册过!</string>
    <string name="input_name">请输入用户名</string>
     <string name="Test">Countries</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="fore">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="jia">+</string>
    <string name="jian">-</string>
    <string name="cheng">*</string>
    <string name="chu">/</string>
    <string name="dengyu">=</string>
    <string name="zhengfu">+/-</string>
    <string name="dihao">.</string>
    <string name="ping">x²</string>
    <string name="kai">√x</string>
    <string name="shanchu">ce</string>
    <string name="shan">c</string>
    <string name="more">Exchanger</string>
    <string name="memoryclear">MC</string>
    <string name="memoryplus">M+</string>
    <string name="memoryminus">M-</string>
    <string name="memoryshow">MR</string>
    <string name="backSpace">&lt;--</string>
    <string name="ButtonPress">Press me to count</string>
    <string name="reset">reset</string>
    <string name="start">Start timer</string>
    <string name="hello">sound</string>
    <string name="Welcome"><b>Welcome to daily helper.\n<br></br>click the buttons to learn about each function of this app!</b></string>
</resources>