<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mention"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#fff1f1f1" >

    <!-- 标题栏 -->

    
            <EditText 
        android:text="" 
        android:id="@+id/textView1" 
        android:textSize="25sp"
        android:textColor="#000000" 
        android:layout_gravity="center"
        android:gravity="left"
        android:cursorVisible="false"
        android:editable = "false" 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent" 
        android:layout_marginLeft="4dip" 
        android:layout_marginRight="4dip" 
        android:layout_marginTop="4dip" android:layout_weight="1.5">
        </EditText>
        
        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:layout_margin="4dip"
            android:layout_weight="10" >
        
        <LinearLayout
        android:id="@+id/linearlayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">

        	<Button
        	    android:id="@+id/buttonc"
        	    android:layout_width="48dp"
        	    android:layout_height="56dp"
        	    android:layout_weight="1"
        	    android:background="@drawable/custom_btn_breaker_bay"
        	    android:text="@string/shan"
        	    android:textSize="25sp" >

        	</Button>

        	<Button
        	android:layout_width="50dip"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:background="@drawable/custom_btn_breaker_bay"
        	android:textSize="25sp" android:id="@+id/buttonce" android:text="@string/shanchu">
        	</Button>
        	
        	<Button
        	android:layout_width="50dip"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:background="@drawable/custom_btn_breaker_bay"
            android:textSize="25sp" android:id="@+id/buttonback" android:text="@string/backSpace">
        	</Button>

        </LinearLayout>
        
        <TableRow
        	android:id="@+id/row8"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1">

        		<Button
        		    android:id="@+id/buttonmrc"
        		    android:layout_width="40dip"
        		    android:layout_height="56dp"
        		    android:layout_weight="1"
        		    android:background="@drawable/custom_btn_sandrift"
        		    android:text="@string/memoryclear"
        		    android:textSize="25sp" >

        		</Button>

        		<Button
        		    android:id="@+id/buttonmplus"
        		    android:layout_width="40dip"
        		    android:layout_height="fill_parent"
        		    android:layout_weight="1"
        		    android:text="@string/memoryplus"
        		    android:background="@drawable/custom_btn_sandrift"
        		    android:textSize="25sp" >

        		</Button>

        		<Button
        		    android:id="@+id/buttonmminus"
        		    android:layout_width="40dip"
        		    android:layout_height="fill_parent"
        		    android:layout_weight="1"
        		    android:text="@string/memoryminus"
        		    android:background="@drawable/custom_btn_sandrift"
        		    android:textSize="25sp" >

        		</Button>

        		<Button
        		    android:id="@+id/button_show"
        		    android:layout_width="40dip"
        		    android:layout_height="fill_parent"
        		    android:layout_weight="1"
        		    android:text="@string/memoryshow"
        		    android:background="@drawable/custom_btn_sandrift"
        		    android:textSize="25sp" >

        		</Button>
        	</TableRow>
        	<TableRow
        	android:id="@+id/row0"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1">

        		<Button
        		    android:id="@+id/button1"
        		    android:layout_width="40dip"
        		    android:layout_height="56dp"
        		    android:layout_weight="1"
        		    android:background="@drawable/btnstyleshakespeare"
        		    android:text="@string/one"
        		    android:textSize="25sp" >

        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/btnstyleshakespeare"
        		android:textSize="25sp" android:text="@string/two" android:id="@+id/button2">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/btnstyleshakespeare"
        		android:textSize="25sp" android:text="@string/three" android:id="@+id/button3">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/custom_btn_orange"
        		android:textSize="25sp" android:text="@string/jia" android:id="@+id/button01">
        		</Button>
        	</TableRow>
        	
        	<TableRow
        	android:id="@+id/row1"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1">

        		<Button
        		    android:id="@+id/button4"
        		    android:layout_width="40dip"
        		    android:layout_height="56dp"
        		    android:layout_weight="1"
        		    android:background="@drawable/btnstyleshakespeare"
        		    android:text="@string/fore"
        		    android:textSize="25sp" >

        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/btnstyleshakespeare"
        		android:textSize="25sp" android:text="@string/five" android:id="@+id/button5">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/btnstyleshakespeare"
        		android:textSize="25sp" android:text="@string/six" android:id="@+id/button6">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/custom_btn_orange"
        		android:textSize="25sp" android:text="@string/jian" android:id="@+id/button02">
        		</Button>
        	</TableRow>
        	
        	<TableRow
        	android:id="@+id/row2"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1">

        		<Button
        		    android:id="@+id/button7"
        		    android:layout_width="40dip"
        		    android:layout_height="56dp"
        		    android:layout_weight="1"
        		    android:background="@drawable/btnstyleshakespeare"
        		    android:text="@string/seven"
        		    android:textSize="25sp" >

        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/btnstyleshakespeare"
        		android:textSize="25sp" android:text="@string/eight" android:id="@+id/button8">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/btnstyleshakespeare"
        		android:textSize="25sp" android:text="@string/nine" android:id="@+id/button9">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/custom_btn_orange"
        		android:textSize="25sp" android:text="@string/cheng" android:id="@+id/button03">
        		</Button>
       	 	 </TableRow>
        	
        	<TableRow
        	android:id="@+id/row3"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1">

        		<Button
        		    android:id="@+id/button0"
        		    android:layout_width="40dip"
        		    android:layout_height="56dp"
        		    android:layout_weight="1"
        		    android:background="@drawable/btnstyleshakespeare"
        		    android:text="@string/zero"
        		    android:textSize="25sp" >

        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background="@drawable/custom_button_sorbus"
        		android:textSize="25sp" android:id="@+id/button06" android:text="@string/dihao">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background="@drawable/custom_button_beige"
        		android:textSize="25sp" android:text="@string/dengyu" android:id="@+id/button05">
        		</Button>
        		<Button
        		android:layout_width="40dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:background = "@drawable/custom_btn_orange"
        		android:textSize="25sp" android:text="@string/chu" android:id="@+id/button04">
        		</Button>
       	  </TableRow>
        <LinearLayout
        android:id="@+id/tableRow1" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_weight="1">

           <Button
               android:id="@+id/zheng"
               android:layout_width="50dp"
               android:layout_height="56dp"
               android:layout_weight="0.72"
               android:background="@drawable/custom_btn_orange"
               android:text="@string/zhengfu"
               android:textSize="25sp" >

           </Button>

           <Button
               android:id="@+id/pingfang"
               android:layout_width="50dp"
               android:layout_height="56dp"
               android:layout_weight="0.99"
               android:background="@drawable/custom_btn_orange"
               android:text="@string/ping"
               android:textSize="25sp" >

           </Button>
           <Button 
           android:id="@+id/kaifang" 
           android:textSize="25sp" 
           android:layout_height="fill_parent" 
           android:background = "@drawable/custom_btn_orange"
           android:layout_width="50dp" android:layout_weight="1" android:text="@string/kai">
           </Button>

        </LinearLayout>
       </TableLayout>


    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/reply_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/at_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>