<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundcolor"
    tools:ignore="ContentDescription" >

    <!-- 标题栏 -->

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="170dp"
            android:layout_height="146dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="40dp"
            android:text="@string/Welcome" />



          <Button
              android:id="@+id/button1"
              style="@style/ButtonText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentRight="true"
              android:layout_below="@+id/textView1"
              android:layout_marginTop="20dp"
              android:background="@drawable/button_red"
              android:text="@string/remind" />

           <Button
               android:id="@+id/button2"
               style="@style/ButtonText"
               android:layout_alignParentRight="true"
               android:layout_below="@+id/button1"
               android:background="@drawable/button_blue"
               android:text="@string/person_info" />

          <Button
              android:id="@+id/button3"
              style="@style/ButtonText"
              android:layout_alignParentLeft="true"
              android:layout_below="@+id/button2"
              android:background="@drawable/button_green"
              android:text="@string/more" />

</RelativeLayout>