<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".PersonInfoActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient" >

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true"
            android:onClick="onToggleClicked"
            android:text="@string/hello" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button5"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button5"
            android:background="@drawable/button_red"
            android:text="Button presses"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button8"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button6"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/button3"
            android:background="@drawable/button_blue"
            android:text="0" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button8"
            android:layout_alignLeft="@+id/button6"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button8"
            android:background="@drawable/button_red"
            android:text="Total button presses"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button4"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button7"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/button3"
            android:background="@drawable/button_blue"
            android:text="0 pps" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button8"
            android:layout_alignLeft="@+id/button7"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button4"
            android:background="@drawable/button_red"
            android:text="Score (presses per second)"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button10"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/circle"
            android:text="30" />

        <Button
            android:id="@+id/button1"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_above="@+id/switch1"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/button10"
            android:background="@drawable/btnstyleopal"
            android:text="@string/ButtonPress" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true"
            android:text="@string/reset" />

        <Button
            android:id="@+id/button5"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button1"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/button3"
            android:background="@drawable/button_blue"
            android:text="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/start" />

    </RelativeLayout>

</LinearLayout>